<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_header"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp">

        <ImageView
            android:id="@+id/logopanah"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:onClick="goBack"
            android:src="@drawable/ic_header_back" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@id/logopanah"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logopanah"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/username"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/phone"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiomale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/male"
                android:checked="true"
                android:textColor="@color/fontdesc" />

            <RadioButton
                android:id="@+id/radiofemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/female"
                android:textColor="@color/fontdesc" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginTop="65dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:entries="@array/goldarah" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:entries="@array/reshus" />
        </LinearLayout>

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/pass"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass2"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/repass"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repass"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/person"
                android:checked="true"
                android:textColor="@color/fontdesc" />

            <RadioButton
                android:id="@+id/radioorganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="92dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/orga"
                android:textColor="@color/fontdesc" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio2"
            android:entries="@array/job" />

        <EditText
            android:id="@+id/homeadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner2"
            android:backgroundTint="@color/fontdesc"
            android:layout_marginTop="10dp"
            android:hint="@string/home"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeadd"
            android:backgroundTint="@color/fontdesc"
            android:drawableRight="@drawable/ic_blood_needed_location"
            android:hint="@string/loc"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:orientation="horizontal">

            <CheckBox
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agree with Terms and Conditions"
                android:textColor="@color/fontdesc" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/btnputih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear3"
            android:layout_marginTop="20dp"
            android:text="REGISTER"
            android:textColor="@color/lightblue"
            android:textSize="16sp"
            android:onClick="goRegister"/>
    </RelativeLayout>

</RelativeLayout>